@@ -1,5 +1,6 @@
 package com.myapplication.android.builder
 
+import com.android.build.api.dsl.ManagedVirtualDevice
 import com.gradle.enterprise.gradleplugin.testretry.retry
 import java.time.Duration
 import org.gradle.api.Project
@@ -7,15 +8,23 @@ import org.gradle.api.artifacts.VersionCatalogsExtension
 import org.gradle.api.tasks.testing.Test
 import org.gradle.kotlin.dsl.dependencies
 import org.gradle.kotlin.dsl.getByType
+import org.gradle.kotlin.dsl.withType
+
+private val testFilterMap = mapOf(
+    "small" to "androidx.test.filters.SmallTest",
+    "medium" to "androidx.test.filters.MediumTest",
+    "large" to "androidx.test.filters.LargeTest",
+)
 
 @Suppress("UnstableApiUsage")
-internal fun Project.configureTest(
-    commonExtension: AGPCommonExtension
-) {
+internal fun Project.configureTest() {
     val hasDynamicFeatureModulePlugin = pluginManager.hasPlugin("com.android.dynamic-feature")
-    commonExtension.apply {
+    val hasTestModulePlugin = pluginManager.hasPlugin("com.android.test")
+    val hasBaselineProfilePlugin = pluginManager.hasPlugin("androidx.baselineprofile")
+    val androidTestApiLevel = getProperty("build.androidtest.sdk").toIntOrZero()
+    android {
+        // https://developer.android.com/training/testing/instrumented-tests/androidx-test-libraries/runner?hl=en#enable-android
         defaultConfig {
-            // https://developer.android.com/training/testing/junit-runner#ato-gradle
             testInstrumentationRunner = "androidx.test.runner.AndroidJUnitRunner"
 
             // The following argument makes the Android Test Orchestrator run its
@@ -25,7 +34,10 @@ internal fun Project.configureTest(
         }
 
         testOptions {
-            execution = "ANDROIDX_TEST_ORCHESTRATOR"
+            // https://issuetracker.google.com/issues/314821647
+            if (!hasTestModulePlugin && !hasBaselineProfilePlugin) {
+                execution = "ANDROIDX_TEST_ORCHESTRATOR"
+            }
 
             unitTests {
                 // http://robolectric.org/getting-started/#building-with-android-studiogradle
@@ -33,16 +45,56 @@ internal fun Project.configureTest(
                 isIncludeAndroidResources = !hasDynamicFeatureModulePlugin
             }
 
+            // https://developer.android.com/studio/test/gradle-managed-devices
+            managedDevices {
+                devices.register("gmd", ManagedVirtualDevice::class.java) {
+                    device = "Pixel 2"
+
+                    apiLevel = androidTestApiLevel
+                    systemImageSource = "google-atd"
+                }
+            }
+
+
             // https://docs.gradle.org/current/dsl/org.gradle.api.tasks.testing.Test.html#N281DB
             // These values can be adjusted on Jenkins job configuration
             val testMaxForks = getProperty("build.unittest.maxforks", "0").toIntOrZero()
-            val testJvmArgs = getProperty("build.unittest.jvmargs")
             val testForkEvery = getProperty("build.unittest.forkevery", "8").toLong()
             val testHeapSizeMin = getProperty("build.unittest.heapsize.min", "1g")
             val testHeapSizeMax = getProperty("build.unittest.heapsize.max", "6g")
             val testEnableLogging = getProperty("build.unittest.logging", "true").toBoolean()
+            val testJvmArgs = mutableListOf(
+                // https://developer.android.com/build/optimize-your-build#experiment-with-the-jvm-parallel-garbage-collector
+                "-XX:+UseParallelGC",
+                // https://github.com/robolectric/robolectric/issues/7456
+                "--add-opens=java.base/java.lang=ALL-UNNAMED",
+                "--add-opens=java.base/java.util=ALL-UNNAMED",
+                // https://github.com/raphw/byte-buddy/issues/612#issuecomment-463618016
+                "-Djdk.attach.allowAttachSelf=true",
+                // https://github.com/mockito/mockito/issues/3037#issuecomment-1588199599
+                "-XX:+EnableDynamicAgentLoading",
+            ).apply {
+                val jvmArgsFromProperty = getProperty("build.unittest.jvmargs")
+                if (jvmArgsFromProperty.isNotBlank()) {
+                    addAll(jvmArgsFromProperty.split(" "))
+                }
+            }
 
+
+            /**
+             * JUnit4 Size filter which is similar with instrumentation test.
+             * https://github.com/junit-team/junit4/wiki/Categories
+             * https://developer.android.com/training/testing/instrumented-tests/androidx-test-libraries/runner?hl=en#filter-tests
+             */
+            val testSize = getProperty("build.testRunnerArguments.size")
+            val testFilter = testFilterMap[testSize] ?: ""
             unitTests.all {
+                it.useJUnit {
+                    if (testFilter.isNotEmpty()) {
+                        includeCategories(testFilter)
+                    }
+                }
+
                 if (testMaxForks == 0) {
                     it.maxParallelForks =
                         (Runtime.getRuntime().availableProcessors() / 2).coerceAtLeast(1)
@@ -51,10 +103,8 @@ internal fun Project.configureTest(
                 }
                 it.minHeapSize = testHeapSizeMin
                 it.maxHeapSize = testHeapSizeMax
+                it.jvmArgs = testJvmArgs
 
-                if (testJvmArgs.isNotBlank()) {
-                    it.jvmArgs = testJvmArgs.split(" ")
-                }
                 it.setForkEvery(testForkEvery)
 
                 if (testEnableLogging) {
@@ -88,7 +138,7 @@ internal fun Project.configureTest(
         }
     }
 
-    tasks.withType(Test::class.java).configureEach {
+    tasks.withType<Test>().configureEach {
         timeout.set(
             Duration.ofMinutes(
                 rootProject.getProperty("build.timeout.unittest").toLong()
